Adicionando modulos de Webservice singleton e capturando o json do endpoint e instanciando alunos

--- a/JsonAPItoXML/JsonAPItoXML/JsonAPItoXML.csproj
+++ b/JsonAPItoXML/JsonAPItoXML/JsonAPItoXML.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="controler\" />
+    <Folder Include="Process\" />
+    <Folder Include="Sink\" />
+  </ItemGroup>
+
 </Project>
