Completando todo o processo de endpoint ate a criação do xml e com todos os processos usando generics

--- a/JsonAPItoXML/JsonAPItoXML/JsonAPItoXML.csproj
+++ b/JsonAPItoXML/JsonAPItoXML/JsonAPItoXML.csproj
@@ -8,9 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="controler\" />
-    <Folder Include="Process\" />
-    <Folder Include="Sink\" />
+    <Folder Include="XML\" />
   </ItemGroup>
 
 </Project>
